# Rust-Matrix-Multiplication

./: BENCHMARKS.md  Cargo.toml  README.md  TEST_RESULTS.md
benches/: matrix_bench.rs
examples/: basic.rs
src/: lib.rs  parallel.rs  simd.rs
